<resources>
    <string name="app_name">Druzina</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_b1">Обращения граждан</string>
    <string name="text_b2">Карта</string>
    <string name="text_b3">Регистрация/Личный кабинет</string>
    <string name="rayon_center">Центральный</string>
    <string name="rayon_oktyabrskiy">Октябрьский</string>
    <string name="rayon_zaeltsovskiy">Заельцовский</string>
    <string name="rayon_kalininskiy">Калининский</string>
    <string name="rayon_dzerzhinskiy">Дзержинский</string>
    <string name="rayon_kirovskiy">Кировский</string>
    <string name="rayon_leninskiy">Ленинский</string>
    <string name="rayon_ZD">Железнодорожный</string>
    <string name="select_rayon">Выберите район</string>
    <string name="character_zhalobi">Характер жалобы</string>
    <string name="character_zhalobi_1">Хулиганы</string>
    <string name="character_zhalobi_2">Наркотики</string>
    <string name="character_zhalobi_3">Мигранты</string>
    <string name="character_zhalobi_4">Курильщики</string>
    <string name="character_zhalobi_5">Алкоголики</string>
    <string name="character_zhalobi_6">Шумы</string>
    <string name="dannie_zayavitelya">Данные заявителя</string>
    <string name="hint_FIO">ФИО заявителя</string>
    <string name="hint_contacts">Контакты</string>
    <string name="hint_adress">Адрес</string>
    <string name="gotovi_li_napisat_zayavlenie">Готовы ли Вы написать заявление?</string>
    <string name="da">Да</string>
    <string name="net">Нет</string>
    <string name="opishite_situatsiyu">Опишите ситуацию</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отмена</string>
    <string name="kabinet">Личный кабинет</string>
    <string name="hint_FIO_druzinnika">ФИО</string>
    <string name="hint_rayon">Район</string>
    <string name="hint_marshrut">Маршрут</string>
    <string name="hint_phone">Номер телефона</string>
    <string name="hint_udostoverenie">№ удостоверения</string>
    <string name="registration">Регистрация/Заступить на дежурство</string>
    <string name="registration_only">Регистрация</string>
    <string name="narushenie_zafiksirovano">Нарушение зафиксировано</string>
    <string name="btn_sos">SOS</string>
    <string name="end_patrul">Закончить патрулирование</string>
    <string name="na_patrule">Сейчас на патрулировании:</string>
    <string name="title_activity_maps">Map</string>

    <string name="shared_preferencess">name</string>
    <string name="about_us">О нас</string>
    <string name="about_us_text">Доброво́льная наро́дная дружи́на (ДНД) — советская и российская добровольная организация, оказывающая помощь
        государственным правоохранительным органам в охране общественного порядка, охране государственной границы, на уровне предприятия,коллективного
        хозяйства, домоуправления, улицы или села. В СССР дружины имели статус общественных самодеятельных организаций, их задачами являлись борьба
        с преступностью, помощь пограничным войскам в охране государственной границы, предупреждение и пресечение нарушений общественного порядка
        и проведение воспитательной работы с населением в содействии с государственными органами[1]. В своей деятельности, дружины получали помощь
        со стороны государства, комсомольских, партийных и профсоюзных организаций.
    Добровольные народные дружины внесли значительный вклад в противодействие преступности.
        В общей сложности, за первые 25 лет работы дружин, свыше 800 дружинников были награждены правительственными орденами и медалями, более 6 тысяч
        — награждены медалью «За отличную службу по охране общественного порядка», ещё несколько тысяч были награждены почётным знаком «Отличный дружинник»,
        Почётными грамотами и ценными подарками. В память о дружиннике Шихане Батыршине (который задержал вооружённого нарушителя границы до прибытия пограничного наряда) был назван колодец в пустыне Каракумы.
Известны случаи героизма и самопожертвования, проявленные дружинниками, а также случаи задержания ими опасных преступников и рецидивистов:

в ноябре 1962 года в Витебске дружинники Рыбкин и Лимов задержали трёх дебоширов в заводской столовой на ул. Димитрова. После того, как Лимов направился за помощью, хулиганы напали на дружинника В. А. Рыбкина. В ходе рукопашной схватки один из них внезапно выхватил нож и пять раз ударил дружинника, с целью убить и скрыться до прихода сотрудников милиции, однако в этот момент нападавшие были задержаны. Покушавшимся оказался военный преступник Иванов (судимый до войны за хулиганство; в районе Синявинских высот он перешёл линию фронта и поступил на службу в вермахт — сначала в военно-инженерное подразделение, строившее укрепления, а затем в батарею дальнобойной артиллерии). По решению суда, Иванов был расстрелян. Тяжелораненный дружинник Рыбкин выжил, за мужество при задержании преступников он был награждён орденом Красной Звезды.
в октябре 1963 года в Костроме дружинник Ю. П. Ерохов (по профессии — слесарь текстильной фабрики «Знамя труда») вступил в схватку с вооружённым ружьём преступником, был смертельно ранен, но сумел задержать нападавшего до прибытия милиции (впоследствии, его именем была названа одна из улиц города).
в Чите дружинник Ю. Ф. Кадкин (по профессии — шофёр мехколонны № 902) задержал рецидивиста, вооружённого обрезом винтовки.
дружинник Г. А. Вашченко (колхозник свинофермы) участвовал в отражении вооружённого нападения на пограничный пост "Таир-11" - он услышал выстрелы и поднял тревогу, после чего с личным охотничьим ружьём прибыл на помощь занимавшему пост пограничному наряду в составе трёх пограничников
Как отмечал министр внутренних дел БССР В. А. Пискарёв, дружины становились хорошей школой для отбора и начальной подготовки кадров советской милиции: только в 1984 году по рекомендации со стороны партийных, комсомольских организаций и трудовых коллективов на службу в органы министерства внутренних дел было отобрано свыше 3 тыс. человек, имевших опыт работы в составе ДНД — «и это были уже морально и профессионально подготовленные люди». \n \n \n
    Текст согласно материалам Википедия</string>
</resources>
