<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.accherniakocich.android.druzina.Button_1.Rayons">
    <TextView
        android:text="@string/select_rayon"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginBottom="20sp"
        android:gravity="top|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="368dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/rayon_center"
                android:id="@+id/button_rayon_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/rayon_oktyabrskiy"
                android:id="@+id/button_rayon_oktyabrskiy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/rayon_zaeltsovskiy"
                android:id="@+id/button_rayon_zaeltsovskiy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/rayon_kalininskiy"
                android:id="@+id/button_rayon_kalininskiy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/rayon_dzerzhinskiy"
                android:id="@+id/button_rayon_dzerzhinskiy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/rayon_kirovskiy"
                android:id="@+id/button_rayon_kirovskiy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/rayon_leninskiy"
                android:id="@+id/button_rayon_lininskiy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/rayon_ZD"
                android:id="@+id/button_rayon_ZD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
