<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.accherniakocich.android.druzina.Button_1.DannieZayavitelya">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="30sp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_margin="5sp"
                android:text="@string/dannie_zayavitelya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/hint_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/hint_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/hint_FIO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gotovi_li_napisat_zayavlenie"/>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioGroup
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:layout_marginEnd="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/da"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/net"/>
                    </RadioGroup>
                </TableRow>
            </LinearLayout>
            <EditText
                android:hint="@string/opishite_situatsiyu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"
                android:inputType="textMultiLine"/>
        </LinearLayout>
    </ScrollView>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </TableRow>
</LinearLayout>
