<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.accherniakocich.android.druzina.Button_1.Rayons">
    <TextView
        android:text="@string/character_zhalobi"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginBottom="20sp"
        android:gravity="top|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="368dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/character_zhalobi_1"
                android:id="@+id/button_character_zhalobi_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/character_zhalobi_2"
                android:id="@+id/button_character_zhalobi_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/character_zhalobi_3"
                android:id="@+id/button_character_zhalobi_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/character_zhalobi_4"
                android:id="@+id/button_character_zhalobi_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/character_zhalobi_5"
                android:id="@+id/button_character_zhalobi_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
            <Button
                android:text="@string/character_zhalobi_6"
                android:id="@+id/button_character_zhalobi_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickOnButton"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>