<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.accherniakocich.android.druzina.Kabinet">
    <TextView
        android:textColor="#000000"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_margin="10sp"
        android:text="@string/kabinet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/na_p"
        android:textAlignment="center"
        android:layout_margin="10sp"
        android:text="@string/na_patrule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:background="#15ff00"
        android:id="@+id/narushenie_zafiksirovano"
        android:text="@string/narushenie_zafiksirovano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"/>
    <ListView
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_weight="0.5"
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
    <Button
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:text="@string/btn_sos"
        android:layout_weight="1.2"
        android:id="@+id/btn_sos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff0000"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5sp"/>
</LinearLayout>
