<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/background"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.accherniakocich.android.druzina.MainActivity"
    tools:showIn="@layout/app_bar_main">
    <Button
        android:id="@+id/button_1"
        android:layout_margin="5sp"
        android:text="@string/text_b1"
        android:layout_weight="1"
        android:background="@drawable/back_button_1"
        android:layout_width="match_parent"
        android:layout_height="110sp"/>
    <Button
        android:id="@+id/button_2"
        android:layout_margin="5sp"
        android:text="@string/text_b2"
        android:layout_weight="1"
        android:background="@drawable/back_button_2"
        android:layout_width="match_parent"
        android:layout_height="110sp"/>
    <Button
        android:id="@+id/button_3"
        android:layout_margin="5sp"
        android:text="@string/text_b3"
        android:layout_weight="1"
        android:background="@drawable/back_button_3"
        android:layout_width="match_parent"
        android:layout_height="110sp"/>
</LinearLayout>
